# home-agent

./: README.md  flake.nix  hacs.json  pyproject.toml  repository.yaml
.github/workflows/: builder.yml
addon/: .gitignore  Dockerfile  app.py  backends.md  build.yaml  config.yaml  exceptions.py  flake.nix  inference-benchmarker.nix  justfile  mcp-inspector.nix  mcp_client.py  prompts.yaml  pyproject.toml  run.sh  tools.py
addon/app/: dependencies.py  main.py  settings.py
addon/app/api/: router.py
addon/app/api/agent/: endpoints.py  router.py
addon/app/api/frontend/: endpoints.py  router.py
addon/app/db/: __init__.py  models.py
addon/app/models/: __init__.py  connection.py  conversation.py  tool.py  trace.py
addon/app/services/: __init__.py  connection.py  conversation.py  tool.py  trace.py
addon/app/tools/: __init__.py  hass_tools.py  tools.py
addon/app/tracing/: __init__.py  processor.py
addon/frontend/: ingress_issue.md  package-lock.json  package.json  vite.config.ts
addon/frontend/app/: app.css  root.tsx  routes.ts  types.ts
addon/frontend/app/components/: Breadcrumbs.tsx  Header.tsx  JsonCodeBlock.tsx  Loading.tsx  PageLayout.tsx  SchemaViewer.tsx  ThemeToggle.tsx
addon/frontend/app/hooks/: useIngressBase.ts  useTheme.ts
addon/frontend/app/routes/: backends.tsx  connections.tsx  conversations.tsx  documents.tsx  index.tsx  ingress.tsx  models.tsx  tools.tsx  usage.tsx
addon/frontend/app/routes/connections/: index.tsx  layout.tsx  llm.tsx  mcp.tsx
addon/frontend/app/routes/conversations/: conversation.tsx  index.tsx  layout.tsx  trace.tsx
addon/frontend/src/: App.tsx
addon/templates/: tool_chat_template_llama3.2_json.jinja
addon/tests/: conftest.py  fake_model.py  test_app.py  test_responses.py
addon/tools/: hass_tools.py
custom_component/: __init__.py  config_flow.py  const.py  conversation.py  manifest.json
custom_component/translations/: en.json
custom_components/home_agent/: __init__.py  api.py  const.py  conversation.py  manifest.json
eval/: generate_report.py  justfile  pyproject.toml
eval/collect/: conftest.py  test_collect.py
eval/eval/: conftest.py
eval/models/: home-agent.yaml
scripts/: runpod.py
