[project]
name = "addon"
version = "0.1.0"
description = "Add your description here"
# readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix>=8.13.0",
    "arize-phoenix-otel>=0.8.0",
    "fastapi>=0.104.0",
    "litellm[proxy]>=1.60.2",
    "mcp>1.2.1",
    "openai-agents>=0.0.4",
    "openinference-instrumentation-openai-agents>=0.1.1",
    "pydantic>=2.0.0",
    "pydantic-settings==2.7.1",
    "uvicorn>=0.24.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.12",
    "huggingface-hub[cli]>=0.28.0",
    "ipykernel>=6.29.5",
]
