[project]
name = "addon"
version = "0.1.0"
description = "Add your description here"
# readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix>=8.13.0",
    "arize-phoenix-otel>=0.8.0",
    "fastapi>=0.104.0",
    #"litellm[proxy]>=1.60.2",
    #"mcp>1.2.1",
    "httpx>=0.27.2",
    "jsonschema>=4.24.0",
    "openai-agents>=0.2.8",
    "openinference-instrumentation-openai-agents>=0.1.7",
    "pydantic>=2.0.0",
    "pydantic-settings==2.7.1",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.24.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.12",
    "huggingface-hub[cli]>=0.28.0",
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "ruff>=0.12.1",
]

# A build system is required for the app to be available to other workspace members
[build-system]
requires = ["uv_build>=0.7.0,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "app"
